--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -7,14 +7,6 @@
     android:orientation="vertical"
     tools:context=".MainActivity">
 
-    <TextView
-        android:id="@+id/showText"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="16dp"
-        android:layout_marginBottom="24dp"
-        android:text="@string/hello" />
 
     <EditText
         android:id="@+id/inpText"
@@ -22,13 +14,22 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="30dp"
         android:ems="10"
-        android:inputType="textPersonName" />
+        android:hint="@string/hint_txt1"
+        android:inputType="number|textPersonName|text|textEmailAddress" />
 
     <Button
         android:id="@+id/btn1"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:onClick="btnClick"
-        android:text="@string/btn_lable" />
+        android:onClick="onClick"
+        android:text="@string/btn_lable1" />
 
+    <TextView
+        android:id="@+id/showText"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="24dp"
+        android:gravity="start"
+        android:padding="16dp"
+        android:text="@string/show_lable1" />
 </LinearLayout>
